--- a/RazorPageWeddingWebsite/wwwroot/static/css/header-with-secondary.css
+++ b/RazorPageWeddingWebsite/wwwroot/static/css/header-with-secondary.css
@@ -235,8 +235,8 @@ h1.home>a.home-link {
 @media (max-width: 576px) {
 
     header {
-        padding-left: 15px;
-        padding-right: 15px;
+        padding-left: calc(2.4 * var(--space-md)) !important;
+        padding-right: calc(2.4 * var(--space-md)) !important;
         height: 129px;
     }
 
@@ -310,7 +310,7 @@ h1.home>a.home-link {
     }
 
     div.panel-content {
-        margin-left: 40px;
+        margin-left: 30px;
     }
 
     panel-content ul {
