--- a/RazorPageWeddingWebsite/wwwroot/static/css/map.css
+++ b/RazorPageWeddingWebsite/wwwroot/static/css/map.css
@@ -10,5 +10,5 @@
 }
 
 iframe {
-    background-color:red;
+    background-color:transparent;
 }
